--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gatsby-plugin-react-helmet": "^5.14.0",
     "gatsby-plugin-sass": "^5.14.0",
     "gatsby-plugin-sharp": "^4.14.1",
-    "gatsby-source-filesystem": "^4.14.0",
+    "gatsby-source-filesystem": "^4.15.0",
+    "gatsby-transformer-remark": "^5.15.0",
     "gatsby-transformer-sharp": "^4.14.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
@@ -22,6 +23,7 @@
     "sass": "^1.52.1"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "prettier": "^2.6.2"
   },
   "keywords": [
@@ -30,7 +32,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd -f .env.development gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
